--- a/Umbrella/Umbrella.csproj
+++ b/Umbrella/Umbrella.csproj
@@ -27,6 +27,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Images\NHack.ico" />
     <Resource Include="Images\NHack.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
